# lattice-miner-gpu

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker.yml  vast-watchdog.yml  watchdog.yml
deploy/: cuda-worker.sh  gpu-entrypoint.sh
fleet/: README.md  miner.sky.yaml  watchdog.py
fleet/examples/: vast-watchdog.py
src/: cuda_backend.rs  main.rs  metal_backend.rs  opencl_backend.rs  sha256.rs
